--- a/Motion Capture/Motion Capture.slides.html
+++ b/Motion Capture/Motion Capture.slides.html
@@ -13319,6 +13319,33 @@ a.anchor-link {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
+<h2 id="Magnetic-Tracker">Magnetic Tracker<a class="anchor-link" href="#Magnetic-Tracker">&#182;</a></h2><p><img src="fig/polhemus.jpg" alt="Polhemus"></p>
+<p>Polhemus 6 DOF electromagnetic tracker</p>
+
+</div>
+</div>
+</div></section><section>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h2 id="Mechanical-Sensors">Mechanical Sensors<a class="anchor-link" href="#Mechanical-Sensors">&#182;</a></h2><p><img src="fig/glove.jpg" alt="Glove"></p>
+<p>Home-built glove with bend sensors and force sensing resistors</p>
+
+</div>
+</div>
+</div></section><section>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h2 id="Inertial-Sensors">Inertial Sensors<a class="anchor-link" href="#Inertial-Sensors">&#182;</a></h2><p><img src="fig/inertial.jpg" alt="Inertial"></p>
+<p>Various inertial sensors (accelerometer, gyorscope, magnetometer)</p>
+
+</div>
+</div>
+</div></section><section>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
 <h3 id="Inertial-motion-capture-suite">Inertial motion capture suite<a class="anchor-link" href="#Inertial-motion-capture-suite">&#182;</a></h3><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/mi1UKP7ZvyQ?start=113" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
 </div>
@@ -13333,7 +13360,8 @@ a.anchor-link {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h3 id="Physiological-motion-capture">Physiological motion capture<a class="anchor-link" href="#Physiological-motion-capture">&#182;</a></h3><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/L98pL8CEftA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<h3 id="Physiological-motion-capture">Physiological motion capture<a class="anchor-link" href="#Physiological-motion-capture">&#182;</a></h3><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/L98pL8CEftA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><p>Myo armband with inertial sensors and 8 muscle sensors (EMG)</p>
+
 </div>
 </div>
 </div></section></section>
